updates:   * shop page: fix styling in product listing UI   * featured-product-slider component: fix image getting distorted on different screen sizes   * product-card component: fix styling issues

--- a/src/app/components/featured-product-slider/featured-product-slider.component.scss
+++ b/src/app/components/featured-product-slider/featured-product-slider.component.scss
@@ -35,7 +35,7 @@
 						display: block;
 						width: 100%;
 						height: 60%;
-						object-fit: fill;
+						object-fit: contain;
 					}
 					.product-content {
 						height: 40%;
