--- a/src/app/components/product-card/product-card.component.scss
+++ b/src/app/components/product-card/product-card.component.scss
@@ -3,7 +3,7 @@
 .product-card {
   position: relative;
   background: white;
-  height: 450px;
+  height: 435px;
   border-radius: 6px;
   padding: 1em;
 }
@@ -21,7 +21,7 @@
   display: flex;
   align-items: center;
   font-size: 1.2rem;
-  margin-top: 25px;
+  margin-top: 10px;
   height: 45px;
 }
 
